--- a/app/src/main/res/layout/rcv_montrongban.xml
+++ b/app/src/main/res/layout/rcv_montrongban.xml
@@ -7,10 +7,15 @@
     app:cardCornerRadius="10dp"
     android:layout_margin="10dp"
     android:layout_height="wrap_content">
+
+
+
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           >
+
+
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -19,8 +24,13 @@
               android:padding="20dp"
               android:layout_margin="10dp"
               >
-
-          <TextView
+              <ImageView
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="0.5"
+                  android:id="@+id/img"
+                  />
+       <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
